test/classes/delete-free/owned-shared-on-record.good
owned-shared-on-record.chpl:3: error: cannot use non-class type 'C' with memory management specifiers
